# axon

./: .cache  .dockerignore  .env.example  .env.tei.example  .gitattributes  .gitignore  .monolith-allowlist  .progress.md  .release-please-manifest.json  .taplo.toml  ACP-GAP-ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CODESPACES.md  COLLECTION-ROUTING.md  Cargo.toml  ENHANCE-INCREMENTAL-CRAWLING.md  EXAMPLES-CAPABILITY-AUDIT.md  Justfile  OPEN_IN_PROGRESS_BEADS.md  README.md  analyze-condition.js  axon-interface.html  axon-palette.html  axon-ws-bridge.py  axon.json  axon.schema.json  biome.json  build.rs  cliff.toml  config.example.toml  crates.rs  debug-embed.js  deny.toml  docker-compose.codespaces.yaml  docker-compose.dev.yaml  docker-compose.external-qdrant.yaml  docker-compose.gpu.yaml  docker-compose.llama.yaml  docker-compose.prod.yaml  (+34 more)
apps/desktop/: Cargo.toml  README.md
apps/desktop/src/: actions.rs  actions_tests.rs  anim.rs  anim_tests.rs  assets.rs  conversation.rs  conversation_tests.rs  layout.rs  layout_tests.rs  main.rs  markdown.rs  markdown_tests.rs  output.rs  output_tests.rs  render.rs  render_output.rs  rest_client.rs  rest_client_tests.rs  settings.rs  settings_tests.rs  settings_view.rs  theme.rs  ui.rs  ui_body.rs  ui_commands.rs  ui_commands_tests.rs  ui_render.rs  ui_tests.rs
crates/axon-adapters/: Cargo.toml
crates/axon-adapters/fixtures/: provider-variant-exceptions.json
crates/axon-adapters/src/: CLAUDE.md  acquisition.rs  acquisition_security.rs  acquisition_security_tests.rs  adapter.rs  adapter_tests.rs  boundary.rs  boundary_tests.rs  capability.rs  cli_tool.rs  enrichment.rs  enrichment_tests.rs  family_matrix.rs  family_matrix_tests.rs  feed.rs  feed_tests.rs  fixture_tests.rs  git.rs  git_tests.rs  lib.rs  local.rs  local_select.rs  local_test_support.rs  local_tests.rs  manifest.rs  manifest_tests.rs  mcp_tests.rs  mcp_tool.rs  memory.rs  memory_tests.rs  onboarding.rs  onboarding_tests.rs  providers.rs  reddit.rs  reddit_tests.rs  registry.rs  registry_sources.rs  registry_sources_dump_tests.rs  registry_sources_metadata_tests.rs  registry_sources_options_tests.rs  (+17 more)
crates/axon-api/: Cargo.toml
crates/axon-api/src/: CLAUDE.md  contract.rs  contract_tests.rs  diff.rs  explain.rs  ingest.rs  job_dto.rs  job_progress.rs  job_progress_tests.rs  job_status.rs  job_status_tests.rs  lib.rs  mcp_schema.rs  mcp_schema_tests.rs  migration.rs  purge.rs  reset.rs  result.rs  result_tests.rs  schema_registry.rs  service_job.rs  service_job_tests.rs  source.rs  source_audit_tests.rs  source_capability_tests.rs  source_graph_tests.rs  source_job_dto_tests.rs  source_job_policy_tests.rs  source_job_tests.rs  source_redaction_tests.rs  source_stage_fixture_tests.rs  source_status_tests.rs  source_tests.rs  source_vector_tests.rs
crates/axon-authz/: Cargo.toml
crates/axon-authz/src/: CLAUDE.md  affinity.rs  affinity_tests.rs  caller.rs  caller_tests.rs  decision.rs  decision_tests.rs  http.rs  lib.rs  lib_tests.rs  policy.rs  policy_tests.rs  visibility.rs  visibility_tests.rs
crates/axon-cli/: Cargo.toml
crates/axon-cli/src/: CLAUDE.md  README.md  commands.rs  commands_command_signature_tests.rs  json.rs  json_tests.rs  lib.rs  lib_tests.rs  schema_registry.rs  scrape_map_source_projection_tests.rs  ui.rs
crates/axon-code-index/: Cargo.toml
crates/axon-code-index/src/: code_index_tests.rs  config.rs  ensure.rs  indexer.rs  lib.rs  manifest.rs  paths.rs  progress.rs  store.rs  store_schema.rs  summary.rs
crates/axon-core/: Cargo.toml
crates/axon-core/src/: CLAUDE.md  README.md  artifacts.rs  artifacts_tests.rs  ask_explain.rs  boundary.rs  boundary_tests.rs  config.rs  content_tests.rs  endpoints.rs  env.rs  error.rs  error_tests.rs  events.rs  hardening.rs  hardening_tests.rs  health.rs  health_tests.rs  http.rs  http_tests.rs  lib.rs  llm.rs  llm_tests.rs  logging.rs  logging_tests.rs  paths.rs  paths_tests.rs  redact.rs  redact_tests.rs  sqlite.rs  structured.rs  structured_tests.rs  ui.rs  ui_color_tests.rs
crates/axon-crawl/: Cargo.toml
crates/axon-crawl/src/: CLAUDE.md  automation.rs  automation_tests.rs  chrome_bootstrap.rs  engine.rs  manifest.rs  manifest_tests.rs  scrape.rs  screenshot.rs
crates/axon-document/: Cargo.toml
crates/axon-document/src/: CLAUDE.md  boundary.rs  boundary_tests.rs  chunk.rs  chunk_router.rs  chunk_router_tests.rs  code.rs  code_tests.rs  lib.rs  local_source_tests.rs  markdown.rs  markdown_tests.rs  metadata.rs  parse.rs  parse_tests.rs  prepared.rs  preparer.rs  preparer_tests.rs  profile.rs  schema.rs  session.rs  source_range.rs  source_range_tests.rs  structured_formats.rs  structured_formats_tests.rs  testing.rs  testing_tests.rs  text.rs  transcript.rs
crates/axon-embedding/: Cargo.toml
crates/axon-embedding/src/: CLAUDE.md  batch.rs  capability.rs  capability_tests.rs  fake.rs  lib.rs  openai_compat.rs  provider.rs  provider_tests.rs  reservation.rs  reservation_compat_tests.rs  tei.rs  tei_client_tests.rs  testing.rs
crates/axon-error/: Cargo.toml
crates/axon-error/src/: CLAUDE.md  api_error.rs  api_error_tests.rs  code.rs  code_tests.rs  context.rs  context_tests.rs  conversion.rs  conversion_tests.rs  cooling.rs  cooling_tests.rs  degradation.rs  degradation_tests.rs  lib.rs  retry.rs  retry_tests.rs  schema_registry.rs  severity.rs  severity_tests.rs  (+4 more)
crates/axon-extract/: Cargo.toml
crates/axon-graph/: Cargo.toml
crates/axon-ingest/: Cargo.toml
crates/axon-jobs/: Cargo.toml
crates/axon-ledger/: Cargo.toml
crates/axon-llm/: Cargo.toml
crates/axon-mcp/: Cargo.toml
crates/axon-memory/: Cargo.toml
crates/axon-observe/: Cargo.toml
crates/axon-parse/: Cargo.toml
crates/axon-prune/: Cargo.toml
crates/axon-retrieval/: Cargo.toml
crates/axon-route/: Cargo.toml
crates/axon-services/: Cargo.toml
crates/axon-source-ledger/: Cargo.toml
crates/axon-vector/: Cargo.toml
crates/axon-vectors/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: bench_embed.rs  checks.rs  docs.rs  docs_tests.rs  main.rs  pre_push.rs  presentation.rs  presentation_tests.rs  schemas.rs
(+7534 files in other folders)
