[workspace]
members = ["xtask"]
resolver = "2"

# Override lab-auth from the git source with a local vendored copy that uses
# rusqlite 0.32 (libsqlite3-sys 0.30) instead of rusqlite 0.39 (libsqlite3-sys
# 0.37). Both libsqlite3-sys versions declare `links = "sqlite3"`, which Cargo
# forbids when two different versions of a links-crate coexist in the same
# build graph. sqlx-sqlite 0.8 pins libsqlite3-sys = "0.30.1", so using
# rusqlite 0.32 here resolves to the same libsqlite3-sys version and eliminates
# the conflict.
[patch."https://github.com/jmagar/lab.git"]
lab-auth = { path = "vendor/lab-auth" }

[package]
name = "axon"
version = "1.11.3"
edition = "2024"
rust-version = "1.94.0"
description = "Web crawl, scrape, embed, and query CLI backed by a self-hosted RAG stack"
authors = ["jmagar"]
license = "MIT"

[[bin]]
name = "axon"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
bollard = "0.20"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
console = "0.16"
dialoguer = "0.12"
indicatif = "0.18"
log = "0.4"
moka = { version = "0.12", features = ["future"] }
octocrab = "0.49"
openssh = "0.11.6"
openssh-sftp-client = { version = "0.15.7", features = ["openssh"] }
portable-pty = "0"
futures-util = "0.3"
futures = "0.3"
reqwest = { version = "0.13", features = ["json", "rustls", "stream", "form"] }
rustls = { version = "0.23", features = ["aws-lc-rs"], default-features = false }
rand = "0.10"
rand_core = { version = "0.9", features = ["os_rng", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
# NOTE: In spider v2.45.x these are valid optional features and are required
# for our crawl/render pipeline.
spider = { version = "2", default-features = false, features = [
  "basic",
  "chrome",
  "regex",
  "sitemap",
  "adblock",
  "chrome_stealth",
  "chrome_screenshot",
  "chrome_store_page",
  "chrome_headless_new",
  "chrome_simd",
  "simd",
  "inline-more",
  "cache_mem",
  "ua_generator",
  "headers",
  "time",
  "control",
  "firewall",
  "hedge",
] }
spider_agent = { version = "2.47.89", default-features = false, features = [
  "search_tavily",
  "openai",
] }
spider_transformations = "2"
ssh2-config = "0.7.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
subtle = "2"
text-splitter = { version = "0.30", features = ["code", "markdown"] }
tree-sitter-bash = "0.25"
tree-sitter-go = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-language = "0.1"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "io-util",
  "net",
  "process",
  "signal",
  "sync",
  "time",
] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
toml = { version = "1.1", default-features = false, features = ["parse", "serde"] }
toml_edit = "0.25.11"
tokio-util = { version = "0.7", features = ["compat"] }
tokio-executor-trait = "3"
tokio-reactor-trait = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
regex = "1"
sha2 = "0.11"
hex = "0.4"
reflink-copy = "0.1"
dotenvy = "0.15"
# rmcp 1.5+ is required: 1.5 introduced the HTTP Parts injection into
# RequestContext::extensions that our OAuth scope check relies on
# (ctx.extensions.get::<http::request::Parts>()). Pin to >=1.5 to avoid
# silently landing on an earlier version that lacks this feature.
rmcp = { version = "1.5", features = [
  "server",
  "macros",
  "transport-io",
  "transport-streamable-http-server",
  "schemars",
  "elicitation",
] }
# OAuth 2.0 + JWT auth (shared with lab via parameterizable lab-auth crate).
# Pinned to the exact SHA that introduced the parameterizable API used here.
lab-auth = { git = "https://github.com/jmagar/lab.git", rev = "87cec3241f9baef22335de9cc8629ebbcd8ba047", package = "lab-auth" }
url = "2"
html5gum = "0.8"
libc = "0.2"
mime_guess = "2"
rust-embed = "8"

[features]
default = []
test-helpers = []
live-qdrant = []

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev.package.spider]
opt-level = 2

[dev-dependencies]
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "io-util",
  "net",
  "process",
  "signal",
  "sync",
  "time",
] }
# httpmock enables mock HTTP servers in unit tests, unlocking coverage for
# tei_embed 413-retry logic, ensure_collection idempotency, and API clients
# without requiring live services.
httpmock = "0.8"
insta = { version = "1", features = ["json"] }
serial_test = "3"
proptest = "1"

[lints.rust]
unsafe_code = "deny"
unused_import_braces = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
module_inception = "allow"              # src/crawl.rs: acceptable module name
