[workspace]
members = ["xtask"]
# apps/desktop is intentionally a separate workspace: it pulls in GPUI from
# zed-industries/zed, whose transitive deps (gpui_wgpu → wasm-bindgen 0.2.120+)
# conflict with axon's reqwest/web-sys-locked wasm-bindgen 0.2.118.
exclude = ["apps/desktop"]
resolver = "2"

# Override lab-auth from the git source with a local vendored copy that uses
# rusqlite 0.32 (libsqlite3-sys 0.30) instead of rusqlite 0.39 (libsqlite3-sys
# 0.37). Both libsqlite3-sys versions declare `links = "sqlite3"`, which Cargo
# forbids when two different versions of a links-crate coexist in the same
# build graph. sqlx-sqlite 0.8 pins libsqlite3-sys = "0.30.1", so using
# rusqlite 0.32 here resolves to the same libsqlite3-sys version and eliminates
# the conflict.
[patch."https://github.com/jmagar/lab.git"]
lab-auth = { path = "vendor/lab-auth" }

[package]
name = "axon"
version = "4.20.0"
edition = "2024"
rust-version = "1.94.0"
description = "Web crawl, scrape, embed, and query CLI backed by a self-hosted RAG stack"
authors = ["jmagar"]
license = "MIT"

[[bin]]
name = "axon"

[dependencies]
anyhow = "1"
async-trait = "0.1"
flate2 = "1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
comfy-table = "7"
console = "0.16"
dialoguer = "0.12"
indicatif = "0.18"
supports-hyperlinks = "3"
moka = { version = "0.12", features = ["future"] }
octocrab = "0.49"
psl = "2"
pulldown-cmark = "0.13"
futures-util = "0.3"
futures = "0.3"
reqwest = { version = "0.13", features = ["json", "rustls", "stream", "form"] }
rustls = { version = "0.23", features = ["aws-lc-rs"], default-features = false }
rand = "0.10"
rand_core = { version = "0.9", features = ["os_rng", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
# NOTE: In spider v2.45.x these are valid optional features and are required
# for our crawl/render pipeline.
#
# `firewall` is intentionally OFF: spider_firewall's build.rs fetches
# blocklists from api.github.com unauthenticated and panics when GitHub
# rate-limits the CI runner. validate_url() in src/core/http/ssrf.rs
# remains the primary SSRF guard; spider_firewall was defense-in-depth.
spider = { version = "2", default-features = false, features = [
  "basic",
  "chrome",
  "regex",
  "sitemap",
  "adblock",
  "chrome_stealth",
  "chrome_screenshot",
  "chrome_store_page",
  "chrome_headless_new",
  "chrome_simd",
  "simd",
  "inline-more",
  "cache_mem",
  "ua_generator",
  "headers",
  "time",
  "control",
  "hedge",
  # Conditional re-crawl: sends If-None-Match / If-Modified-Since and skips
  # the body on 304 Not Modified. Wired in src/crawl/engine/runtime.rs and
  # reconciled cross-run in src/crawl/engine/etag.rs (bead axon_rust-hiyf).
  "etag_cache",
] }
spider_agent = { version = "2.47.89", default-features = false, features = [
  "search_tavily",
  "openai",
] }
spider_transformations = "2"
ssh2-config = "0.7.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
subtle = "2"
text-splitter = { version = "0.30", features = ["code", "markdown"] }
tree-sitter-bash = "0.25"
tree-sitter-go = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-language = "0.1"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "io-util",
  "net",
  "process",
  "signal",
  "sync",
  "time",
] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
toml = { version = "1.1", default-features = false, features = ["parse", "serde"] }
toml_edit = "0.25.11"
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"
# `debug-embed` embeds the Swagger UI assets in debug builds too (rust-embed
# otherwise only embeds in release), so `/docs` serves the UI under `cargo test`
# and the openapi-docs route test passes. Release behavior is unchanged.
utoipa-swagger-ui = { version = "9", features = ["axum", "debug-embed"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
regex = "1"
similar = "2"
scraper = "0.22"
once_cell = "1"
sha2 = "0.11"
hex = "0.4"
reflink-copy = "0.1"
dotenvy = "0.15"
# rmcp 1.5+ is required: 1.5 introduced the HTTP Parts injection into
# RequestContext::extensions that our OAuth scope check relies on
# (ctx.extensions.get::<http::request::Parts>()). Pin to >=1.5 to avoid
# silently landing on an earlier version that lacks this feature.
rmcp = { version = "1.5", features = [
  "server",
  "macros",
  "transport-io",
  "transport-streamable-http-server",
  "schemars",
  "elicitation",
] }
# OAuth 2.0 + JWT auth (shared with lab via parameterizable lab-auth crate).
# Pinned to the exact SHA that introduced the parameterizable API used here.
lab-auth = { git = "https://github.com/jmagar/lab.git", rev = "87cec3241f9baef22335de9cc8629ebbcd8ba047", package = "lab-auth" }
url = "2"
html5gum = "0.8"
libc = "0.2"
mime_guess = "2"
rust-embed = "8"

[features]
# Feature gates for optional heavy dependencies from the webclaw port.
# All default OFF — enabling them is a build-time choice.
# See docs/reference/cargo-features.md for full rationale and CI impact.
default = []
test-helpers = []
live-qdrant = []

# TLS fingerprinting via wreq+BoringSSL. Requires cmake/clang/perl/go.
# CI impact: +8-12 min cold build, +400MB target/. See axon_rust-wf4s.
tls-fingerprinting = []

# QuickJS sandbox for window.__* JS blob extraction. Requires rquickjs.
# Process-isolation wrapper required. See axon_rust-b6xi.
quickjs = []

# Instagram/LinkedIn social verticals. Requires cloud antibot bypass.
# Gate with AXON_ENABLE_SOCIAL_VERTICALS=1 env var at runtime. See axon_rust-2mrr.
social-verticals = []

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev.package.spider]
opt-level = 2

[dev-dependencies]
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "io-util",
  "net",
  "process",
  "signal",
  "sync",
  "time",
] }
# httpmock enables mock HTTP servers in unit tests, unlocking coverage for
# tei_embed 413-retry logic, ensure_collection idempotency, and API clients
# without requiring live services.
httpmock = "0.8"
serial_test = "3"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dom_extraction"
harness = false

[lints.rust]
unsafe_code = "deny"
unused_import_braces = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
module_inception = "allow"              # src/crawl.rs: acceptable module name
