[workspace]
members = [
    "xtask",
    "crates/axon-error",
    "crates/axon-api",
    "crates/axon-authz",
    "crates/axon-core",
    "crates/axon-observe",
    "crates/axon-route",
    "crates/axon-extract",
    "crates/axon-adapters",
    "crates/axon-ledger",
    "crates/axon-parse",
    "crates/axon-graph",
    "crates/axon-memory",
    "crates/axon-document",
    "crates/axon-embedding",
    "crates/axon-vectors",
    "crates/axon-retrieval",
    "crates/axon-llm",
    "crates/axon-prune",
    "crates/axon-jobs",
    "crates/axon-services",
    "crates/axon-mcp",
    "crates/axon-web",
    "crates/axon-cli",
]
# apps/palette-tauri/src-tauri declares its own `[workspace]`, so it builds as a
# standalone workspace and is not a member here.
resolver = "2"

# Product version, inherited by every crate via `version.workspace = true`. The
# `axon` package keeps an explicit `version` too (the release checker reads it as
# a string); `cargo xtask bump-version cli` moves both in lockstep.
[workspace.package]
version = "7.0.0"
edition = "2024"
rust-version = "1.94.0"
keywords = ["rag", "mcp", "qdrant", "embeddings", "crawler"]
repository = "https://github.com/jmagar/axon"
homepage = "https://github.com/jmagar/axon#readme"
authors = ["jmagar"]
description = "Self-hosted RAG stack for crawl, scrape, search, ingest, query, and ask workflows with Qdrant, TEI, MCP, CLI, REST, and Gemini."
license = "MIT"

# Override lab-auth from the git source with a local vendored copy that uses
# rusqlite 0.32 (libsqlite3-sys 0.30) instead of rusqlite 0.39 (libsqlite3-sys
# 0.37). Both libsqlite3-sys versions declare `links = "sqlite3"`, which Cargo
# forbids when two different versions of a links-crate coexist in the same
# build graph. sqlx-sqlite 0.8 pins libsqlite3-sys = "0.30.1", so using
# rusqlite 0.32 here resolves to the same libsqlite3-sys version and eliminates
# the conflict.
[patch."https://github.com/jmagar/lab.git"]
lab-auth = { path = "vendor/lab-auth" }

[package]
name = "axon"
version = "7.0.0"
edition = "2024"
rust-version = "1.94.0"
categories = ["command-line-utilities", "development-tools"]
keywords = ["rag", "mcp", "qdrant", "embeddings", "crawler"]
repository = "https://github.com/jmagar/axon"
homepage = "https://github.com/jmagar/axon#readme"
description = "Self-hosted RAG stack for crawl, scrape, search, ingest, query, and ask workflows with Qdrant, TEI, MCP, CLI, REST, and Gemini."
authors = ["jmagar"]
license = "MIT"
build = "build.rs"

[[bin]]
name = "axon"

[dependencies]
axon-core = { path = "crates/axon-core" }
axon-services = { path = "crates/axon-services" }
axon-mcp = { path = "crates/axon-mcp" }
axon-web = { path = "crates/axon-web" }
axon-cli = { path = "crates/axon-cli" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", features = ["json", "rustls", "stream", "form"] }
rustls = { version = "0.23", features = ["aws-lc-rs"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "io-util",
  "net",
  "process",
  "signal",
  "sync",
  "time",
] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
dotenvy = "0.15"
# rmcp 1.7+ is required: 1.5 introduced the HTTP Parts injection into
# RequestContext::extensions that our OAuth scope check relies on
# (ctx.extensions.get::<http::request::Parts>()), and 1.7 adds MCP task
# support/progress APIs needed for long-running job-backed tool calls.
rmcp = { version = "1.7.0", features = [
  "server",
  "macros",
  "transport-io",
  "transport-streamable-http-server",
  "schemars",
  "elicitation",
] }

[features]
# Feature gates for optional heavy dependencies from the webclaw port.
# All default OFF — enabling them is a build-time choice.
# See docs/reference/cargo-features.md for full rationale and CI impact.
default = []
test-helpers = []
live-qdrant = []

# TLS fingerprinting via wreq+BoringSSL. Requires cmake/clang/perl/go.
# CI impact: +8-12 min cold build, +400MB target/. See axon_rust-wf4s.
tls-fingerprinting = []

# QuickJS sandbox for window.__* JS blob extraction. Requires rquickjs.
# Process-isolation wrapper required. See axon_rust-b6xi.
quickjs = []

# Instagram/LinkedIn social verticals. Requires cloud antibot bypass.
# Gate with AXON_ENABLE_SOCIAL_VERTICALS=1 env var at runtime. See axon_rust-2mrr.
social-verticals = []

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16

[profile.dev.package.spider]
opt-level = 2

[dev-dependencies]
axon-api = { path = "crates/axon-api" }
axon-core = { path = "crates/axon-core", features = ["test-util"] }
axon-llm = { path = "crates/axon-llm" }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "io-util",
  "net",
  "process",
  "signal",
  "sync",
  "time",
] }
# httpmock enables mock HTTP servers in unit tests, unlocking coverage for
# tei_embed 413-retry logic, ensure_collection idempotency, and API clients
# without requiring live services.
httpmock = "0.8"
serial_test = "3"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[lints.rust]
unsafe_code = "deny"
unused_import_braces = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
module_inception = "allow"              # src/crawl.rs: acceptable module name
