[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
publish = false

[dependencies]
anyhow = "1"
axon-api = { path = "../crates/axon-api" }
axon-error = { path = "../crates/axon-error" }
axon-route = { path = "../crates/axon-route" }
axon-web = { path = "../crates/axon-web", optional = true }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
regex = "1"
reqwest = { version = "0.13", features = ["blocking", "json", "rustls"], default-features = false }
schemars = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.9"
walkdir = "2"

[features]
default = ["openapi-drift"]
openapi-drift = ["dep:axon-web"]

[dev-dependencies]
axon-vectors = { path = "../crates/axon-vectors" }
tempfile = "3"
