[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
publish = false

[dependencies]
anyhow = "1"
axon-api = { path = "../crates/axon-api" }
axon-adapters = { path = "../crates/axon-adapters" }
axon-cli = { path = "../crates/axon-cli" }
axon-core = { path = "../crates/axon-core" }
axon-error = { path = "../crates/axon-error" }
axon-graph = { path = "../crates/axon-graph" }
axon-mcp = { path = "../crates/axon-mcp" }
axon-observe = { path = "../crates/axon-observe" }
axon-route = { path = "../crates/axon-route" }
axon-services = { path = "../crates/axon-services" }
axon-vectors = { path = "../crates/axon-vectors" }
axon-web = { path = "../crates/axon-web" }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
jsonschema = "0.37"
regex = "1"
reqwest = { version = "0.13", features = ["blocking", "json", "rustls"], default-features = false }
schemars = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
syn = { version = "2", features = ["full", "parsing"] }
toml = "0.9"
walkdir = "2"

[features]
default = ["openapi-drift"]
openapi-drift = []

[dev-dependencies]
tempfile = "3"
