[package]
name = "axon-palette"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
description = "Global-hotkey command palette for axon, built with GPUI"
license = "MIT"
publish = false

[[bin]]
name = "axon-palette"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-channel = "2"
global-hotkey = "0.7"
gpui = { git = "https://github.com/zed-industries/zed", branch = "main" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
