# axon-palette is intentionally a standalone workspace, not a member of the
# root axon workspace. GPUI pulls a large transitive dep tree (including
# wasm-bindgen 0.2.120+ via gpui_wgpu) that conflicts with axon's reqwest-
# locked wasm-bindgen 0.2.118. Keeping a separate workspace lets each project
# resolve deps independently and avoids forcing the axon CLI to fetch the zed
# monorepo on every build.
[workspace]

[package]
name = "axon-palette"
version = "0.3.1"
edition = "2024"
rust-version = "1.94.0"
description = "Global-hotkey command palette for axon, built with GPUI"
license = "MIT"
publish = false

[[bin]]
name = "axon-palette"
path = "src/main.rs"

# GPUI is pinned to an immutable rev rather than a branch so builds are
# reproducible. Bump the rev intentionally when upgrading.
[dependencies]
anyhow = "1"
async-channel = "2"
global-hotkey = "0.7"
open = "5"
pulldown-cmark = { version = "0.10", default-features = false }
gpui = { git = "https://github.com/zed-industries/zed", rev = "5f5dd7ae301dd265e5020fd65cd20769a81d0d5b" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# We depend on the platform backends directly rather than the gpui_platform
# convenience crate because gpui_platform transitively pulls in gpui_web,
# which forces wasm-bindgen >=0.2.120 (conflict with axon's reqwest dep tree).
[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
gpui_linux = { git = "https://github.com/zed-industries/zed", rev = "5f5dd7ae301dd265e5020fd65cd20769a81d0d5b" }

# Windows builds need the windows-manifest feature on gpui itself (DPI
# awareness, UTF-8 codepage) plus the platform backend.
[target.'cfg(target_os = "windows")'.dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "5f5dd7ae301dd265e5020fd65cd20769a81d0d5b", features = [
  "windows-manifest",
] }
gpui_windows = { git = "https://github.com/zed-industries/zed", rev = "5f5dd7ae301dd265e5020fd65cd20769a81d0d5b" }
