[package]
name = "axon-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
axon-api = { path = "../axon-api" }
axon-core = { path = "../axon-core" }
axon-error = { path = "../axon-error" }
axon-extract = { path = "../axon-extract" }
axon-observe = { path = "../axon-observe" }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
feed-rs = "2"
futures-util = "0.3"
globset = "0.4"
hex = "0.4"
ignore = "0.4"
pulldown-cmark = "0.13"
reflink-copy = "0.1"
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "rustls",
  "stream",
  "form",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
# Axon web-engine crawl transport (Spider-based HTTP/Chrome crawl, manifest,
# sitemap, screenshot). Relocated in-crate from the former `axon-crawl` crate
# (issue #298 Wave 2a) — see `crates/axon-adapters/src/web_engine.rs`.
spider = { version = "2", default-features = false, features = [
  "basic",
  "chrome",
  "regex",
  "sitemap",
  "adblock",
  "chrome_stealth",
  "chrome_screenshot",
  "chrome_store_page",
  "chrome_headless_new",
  "chrome_simd",
  "simd",
  "inline-more",
  "cache_mem",
  "ua_generator",
  "headers",
  "time",
  "control",
  "hedge",
  "etag_cache",
  "warc",
] }
spider_transformations = "2"
# Tavily AI Search client reused by `providers::tavily_search` — the same
# crate/feature `axon-services` already depends on for its Tavily search path
# (see `crates/axon-services/Cargo.toml`). Only the search client is needed
# here, not `openai`.
spider_agent = { version = "2.47.89", default-features = false, features = ["search_tavily"] }
tempfile = "3"
tokio = { version = "1", features = [
  "rt",
  "macros",
  "rt-multi-thread",
  "fs",
  "io-util",
  "net",
  "process",
  "signal",
  "sync",
  "time",
] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
tokio-util = { version = "0.7", features = ["compat", "io"] }
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }

[dev-dependencies]
# test-util exposes LoopbackGuard so tests can reach httpmock's 127.0.0.1
# servers past the SSRF guard.
axon-core = { path = "../axon-core", features = ["test-util"] }
httpmock = "0.8"
proptest = "1"
serial_test = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
