[package]
name = "axon-authz"
version.workspace = true
edition = "2024"
rust-version = "1.94.0"
description = "Axon OAuth scope constants and satisfaction logic"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
lab-auth = { git = "https://github.com/jmagar/lab.git", rev = "87cec3241f9baef22335de9cc8629ebbcd8ba047", package = "lab-auth" }
tracing = "0.1"
