[package]
name = "axon-code-index"
version.workspace = true
edition = "2024"
rust-version = "1.94.0"
description = "Axon local-code semantic index: git-checkout manifest, freshness leasing, incremental reindex into Qdrant"
license = "MIT"

[dependencies]
axon-core = { path = "../axon-core" }
axon-vector = { path = "../axon-vector" }
axon-jobs = { path = "../axon-jobs" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "io-util",
  "net",
  "process",
  "signal",
  "sync",
  "time",
] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
sha2 = "0.11"
hex = "0.4"

[lints.rust]
unsafe_code = "deny"
unused_import_braces = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
module_inception = "allow"              # src/crawl.rs: acceptable module name
[features]
test-util = []

[dev-dependencies]
axon-core = { path = "../axon-core", features = ["test-util"] }
httpmock = "0.8"
serial_test = "3"
proptest = "1"
