[package]
name = "axon-core"
version.workspace = true
edition = "2024"
rust-version = "1.94.0"
description = "Axon shared infrastructure: config, HTTP/SSRF, content transforms, LLM backends, logging, paths, redaction, UI, health"
license = "MIT"

[features]
# Exposes #[cfg(test)] helpers (Config::test_default, LoopbackGuard, allow_loopback)
# to downstream crates' test builds. Enabled by the axon crate's dev-dependency.
test-util = []

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
console = "0.16"
dialoguer = "0.12"
indicatif = "0.18"
supports-hyperlinks = "3"
pulldown-cmark = "0.13"
futures-util = "0.3"
reqwest = { version = "0.13", features = ["json", "rustls", "stream", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
spider = { version = "2", default-features = false, features = [
  "basic",
  "chrome",
  "regex",
  "sitemap",
  "adblock",
  "chrome_stealth",
  "chrome_screenshot",
  "chrome_store_page",
  "chrome_headless_new",
  "chrome_simd",
  "simd",
  "inline-more",
  "cache_mem",
  "ua_generator",
  "headers",
  "time",
  "control",
  "hedge",
  "etag_cache",
  "warc",
] }
spider_transformations = "2"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "io-util",
  "net",
  "process",
  "signal",
  "sync",
  "time",
] }
toml = { version = "1.1", default-features = false, features = ["parse", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
regex = "1"
sha2 = "0.11"
hex = "0.4"
url = "2"
html5gum = "0.8"
libc = "0.2"
axon-api = { path = "../axon-api" }

[dev-dependencies]
httpmock = "0.8"
serial_test = "3"
proptest = "1"
