[package]
name = "axon-crawl"
version.workspace = true
edition = "2024"
rust-version = "1.94.0"
description = "Axon crawl engine: Spider-based HTTP/Chrome crawl, manifest, sitemap, screenshot"
license = "MIT"

[dependencies]
axon-api = { path = "../axon-api" }
axon-core = { path = "../axon-core" }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = "0.13"
futures-util = "0.3"
reqwest = { version = "0.13", features = ["json", "rustls", "stream", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
spider = { version = "2", default-features = false, features = [
  "basic",
  "chrome",
  "regex",
  "sitemap",
  "adblock",
  "chrome_stealth",
  "chrome_screenshot",
  "chrome_store_page",
  "chrome_headless_new",
  "chrome_simd",
  "simd",
  "inline-more",
  "cache_mem",
  "ua_generator",
  "headers",
  "time",
  "control",
  "hedge",
  "etag_cache",
  "warc",
] }
spider_transformations = "2"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "io-util",
  "net",
  "process",
  "signal",
  "sync",
  "time",
] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
tokio-util = { version = "0.7", features = ["compat", "io"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
sha2 = "0.11"
hex = "0.4"
reflink-copy = "0.1"
url = "2"


[features]
test-util = []

[dev-dependencies]
axon-core = { path = "../axon-core", features = ["test-util"] }
httpmock = "0.8"
serial_test = "3"
proptest = "1"
