[package]
name = "axon-embedding"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
axon-api = { path = "../axon-api" }
axon-error = { path = "../axon-error" }
axon-observe = { path = "../axon-observe" }
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }

[dev-dependencies]
uuid = { version = "1", features = ["v4", "v5", "serde"] }
