[package]
name = "axon-embedding"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
axon-api = { path = "../axon-api" }
axon-error = { path = "../axon-error" }
axon-observe = { path = "../axon-observe" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }

[dev-dependencies]
httpmock = "0.8"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
