[package]
name = "axon-error"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Axon shared error taxonomy: ApiError, error codes, stages, severity, retry/cooling/degradation classifications, and redaction-aware context"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
schemars = { version = "1", features = ["chrono04", "uuid1"] }
utoipa = { version = "5", features = ["chrono", "uuid"] }
